[package]
name = "rust-backend-sample"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["common"]

[workspace.dependencies]
common = { path = "./common" }

[dependencies]
common.workspace = true 
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-macros = "2.5.0"

